# RP-remodeling-szz-discussions

./: .gitattributes  README.md
RQ1/: Manual_Analysis.xlsx
RQ2-RQ3-RQ4/SZZ-evaluation/: README.md  Revision-analysis.ipynb  cmd  preliminary_analysis.ipynb  pyproject.toml
RQ2-RQ3-RQ4/SZZ-evaluation/Datasets/: Datasets-details.md
RQ2-RQ3-RQ4/SZZ-evaluation/Datasets/Extended-commit-dataset/: test.json
RQ2-RQ3-RQ4/SZZ-evaluation/Datasets/Extended-commit-dataset/FilteredRelevantSample/: extended_filtered_sample_detangled_parsed_dataset.json  extended_filtered_sample_detangled_relaxed_dataset.json  extended_filtered_sample_extrinsic_relaxed_dataset.json  extended_filtered_sample_normal_dataset.json  extended_filtered_sample_parsed_relaxed_dataset.json  extended_filtered_sample_relaxed_relaxed_dataset.json
RQ2-RQ3-RQ4/SZZ-evaluation/Datasets/Filtered-Bug-PR-dataset/RelevantSample/: sample_filtered_detangled_parsed_dataset.json  sample_filtered_detangled_relaxed_dataset.json  sample_filtered_extrinsic_relaxed_dataset.json  sample_filtered_normal_dataset.json  sample_filtered_parsed_relaxed_dataset.json  sample_filtered_relaxed_relaxed_dataset.json
RQ2-RQ3-RQ4/SZZ-evaluation/src/: dataset_composer.py  dataset_extender.py  dataset_filter.py  extrinsic_composer.py  filepath_finder.py  filepath_miner.py  folder_cleaner.py  similarity_checker.py  szz_evaluation.py  szz_results_composer.py
RQ2-RQ3-RQ4/SZZ-evaluation/test/: statistical_tests.py  test.py
RQ2-RQ3-RQ4/SZZ-new-variant/: README.md
